--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "discord.js": "^13.8.0",
+    "dotenv": "^16.0.1",
+    "winston": "^3.7.2"
   }
 }
