--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint src --max-warnings 0",
-    "start": "node prod/index.js",
+    "start": "node -r dotenv/config ./prod/index.js",
     "test": "echo 'no tests yet'"
   },
   "repository": {
@@ -31,6 +31,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
     "winston": "^3.7.2"
