--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint src --max-warnings 0",
-    "start": "node prod/index.js",
+    "start": "ts-node -r dotenv/config --transpile-only ./src",
+    "start:dev": "nodemon -r dotenv/config ./src",
     "test": "echo 'no tests yet'"
   },
   "repository": {
@@ -31,8 +32,19 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "@discordjs/rest": "^0.5.0",
+    "axios": "^0.27.2",
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.8.1",
     "winston": "^3.7.2"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "src"
+    ],
+    "ext": "ts, html",
+    "exec": "ts-node --files"
   }
 }
