--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "@discordjs/builders": "^0.15.0",
     "@discordjs/rest": "^0.5.0",
     "axios": "^0.27.2",
     "discord.js": "^13.8.0",
